Changing Post method for filter orderby endpoint
